--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@yogiswara/honcho-editor-ui": "^1.0.5",
+    "rxjs": "^7.8.2",
+    "axios": "^1.11.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
