--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@yogiswara/honcho-editor-ui": "^2.1.20",
     "axios": "^1.11.0",
+    "axios-retry": "^4.5.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
